UE4/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: app
    spec:
      containers:
        - env:
            - name: DB_HOST
              value: db
            - name: DB_NAME
              value: recipe
            - name: DB_PASSWORD
              value: postgres
            - name: DB_PORT
              value: "5432"
            - name: DB_USER
              value: postgres
          image: app
          name: recipe-app
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
