UE4/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: DB_PASSWORD
              value: postgres
            - name: DB_USER
              value: postgres
          image: postgres:latest
          livenessProbe:
            exec:
              command:
                - pg_isready -U postgres
            failureThreshold: 5
            initialDelaySeconds: 30
            periodSeconds: 3
            timeoutSeconds: 10
          name: recipe-db
          ports:
            - containerPort: 5432
              protocol: TCP
      restartPolicy: Always
